force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/Zendesk__Zendesk_Sync_Job__c.object-meta.xml
<CustomObject>
    <label>Zendesk Sync Job</label>
    <nameField>
        <displayFormat>ZDSYNC-{0000}</displayFormat>
        <label>Zendesk Sync Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zendesk Sync Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>