force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/fields/Zendesk__Create_in_Zendesk_Update_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Create_in_Zendesk_Update_Batch_ID__c</fullName>
    <label>Create in Zendesk Update Batch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>