force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/fields/Zendesk__Manual_Match_Update_Salesforce_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Manual_Match_Update_Salesforce_Batch_ID__c</fullName>
    <label>Manual Match Update Salesforce Batch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>