force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/fields/Zendesk__Progress__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Progress__c</fullName>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Match</fullName>
            </value>
            <value>
                <fullName>Manual Match</fullName>
            </value>
            <value>
                <fullName>Update in Salesforce</fullName>
            </value>
            <value>
                <fullName>Manual Match Update Zendesk</fullName>
            </value>
            <value>
                <fullName>Waiting for Create in Zendesk</fullName>
            </value>
            <value>
                <fullName>Prepare for Create in Zendesk</fullName>
            </value>
            <value>
                <fullName>Create in Zendesk</fullName>
            </value>
            <value>
                <fullName>Salesforce Update for Record Created in Zendesk</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Abort</fullName>
            </value>
            <value>
                <fullName>Manual Match Prepare Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>