force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/fields/Zendesk__Source_of_Truth__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Source_of_Truth__c</fullName>
    <label>Source of Truth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zendesk Support</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>