force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/fields/Zendesk__Status__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Aborted by user</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>