force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/fields/Zendesk__Sync_Direction__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Sync_Direction__c</fullName>
    <label>Sync Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zendesk to Salesforce</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Salesforce to Zendesk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>