force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/fields/Zendesk__Sync_Mode__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Sync_Mode__c</fullName>
    <label>Sync Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import only</fullName>
            </value>
            <value>
                <fullName>Full sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>