force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/fields/Zendesk__Sync_Objects__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Sync_Objects__c</fullName>
    <label>Sync Objects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account and Organization</fullName>
            </value>
            <value>
                <fullName>Contact and User</fullName>
            </value>
            <value>
                <fullName>Lead and User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>