force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/fields/Zendesk__Total_Records_Manual_Matched__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Total_Records_Manual_Matched__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Records Manual Matched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>