force-app/main/default/objects/Zendesk__Zendesk_Sync_Job__c/listViews/Zendesk__All.listView-meta.xml
<ListView>
    <fullName>Zendesk__All</fullName>
    <columns>NAME</columns>
    <columns>Zendesk__Total_Records_Auto_Matched__c</columns>
    <columns>Zendesk__Total_Records_Created_in_Zendesk__c</columns>
    <columns>Zendesk__Total_Records_Created_in_Salesforce__c</columns>
    <columns>Zendesk__Sync_Objects__c</columns>
    <columns>Zendesk__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>